# iqprompter

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/iqprompter/: __init__.py  core.py  metrics.py  structural_checks.py  utils.py
tests/: test_iqprompter.py  test_structural_checks.py
